--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </main>
         <footer>
             <div class="container-f">
-                <span id="slogan" class="text">"LAS PERSONAS NO ELIGEN LOS SUEÑOS, LOS SUEÑOS LOS ELIGEN"</span>
+                <span id="slogan" class="text">"LA DIFERENCIA ENTRE LOS <strong>SUEÑOS</strong> Y LA REALIDAD, ES LA <strong>ACCIÓN</strong>"</span>
                 <div class="social-networks">
                     <a target="_blank" href="https://www.facebook.com/Daydreams-112604387268147">
                         <img src="facebook-icon.png" alt="Daydreams facebook">
@@ -138,7 +138,7 @@
                     </a>
                 </div>
                 <div class="information">
-                    <a id="homePage" href="#" translate="no">DAYDREAMS.</a><span class="text"> Sitio Oficial.</span>
+                    <a id="homePage" href="www.daydreams.ga" translate="no">DAYDREAMS.</a><span class="text"> Sitio Oficial.</span>
                 </div>
             </div>
         </footer>
