--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="author" content="DaydreamsAnime">
         <meta name="description" content="Daydreams, un anime tipo Shonen en desarrollo, realizado por un estudio de animación unipersonal.">
-        <link rel="stylesheet" href="styles2.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="icon" href="icon.png">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
