--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </a>
                 </div>
                 <div class="information">
-                    <a id="homePage" href="www.daydreams.ga" translate="no">DAYDREAMS.</a><span class="text"> Sitio Oficial.</span>
+                    <a id="homePage" href="https://daydreams.ga/" translate="no">DAYDREAMS.</a><span class="text"> Sitio Oficial.</span>
                 </div>
             </div>
         </footer>
