--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <title>DAYDREAMS - El anime latino</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
