--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta name="author" content="DaydreamsAnime">
         <meta name="description" content="Daydreams, un anime tipo Shonen en desarrollo, realizado por un estudio de animación unipersonal.">
+        <meta name="google-site-verification" content="Tx8CbtnVBPpylp0sQyHyNZByaDDVBZ7D2wSJF9X_03k" />
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="icon.png">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
