--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="cont-sc">
                 <div class="scroll-div fua">
                     <span class="text">Haz clic aquí para obtener más información :)</span>
-                    <input id="button-scroll" type="image" class="doScroll" src="scroll.png" alt="">
+                    <input id="button-scroll" type="image" class="doScroll" src="scroll.webp" alt="">
                 </div>
             </div>
         </header>
@@ -77,14 +77,14 @@
                                         </div>
                                     </div>
                                     <div class="first-screenshot">
-                                        <img id="fixRot" class="pixelt" width="555" height="312" src="first-screenshot.png" alt="Daydreams juego">
+                                        <img id="fixRot" class="pixelt" width="555" height="312" src="first-screenshot.webp" alt="Daydreams juego">
                                     </div>
                                 </div>
                             </li>
                             <li class="second-li">
                                 <div id="fixRot" class="align2 animado">
                                     <div class="second-screenshot">
-                                        <img id="pixelt1" width="555" height="312" src="second-screenshot.png" alt="un anime para cambiar latinoamerica">
+                                        <img id="pixelt1" width="555" height="312" src="second-screenshot.webp" alt="un anime para cambiar latinoamerica">
                                     </div>
                                     <div class="bloque">
                                         <div class="feature-title text">Una educación innovadora</div>
@@ -118,7 +118,7 @@
                     </form>
                     <div class="send-div animado enviaF" id="toLeft">
                         <a href="https://www.change.org/MejoremosLatinoamerica" target="_blank">
-                            <img id="send" src="send-image.png" alt="Sign on Change.org">
+                            <img id="send" src="send-image.webp" alt="Sign on Change.org">
                         </a>
                     </div>
                 </div>
@@ -129,13 +129,13 @@
                 <span id="slogan" class="text">"LA DIFERENCIA ENTRE LOS <strong>SUEÑOS</strong> Y LA REALIDAD, ES LA <strong>ACCIÓN</strong>"</span>
                 <div class="social-networks">
                     <a target="_blank" href="https://www.facebook.com/Daydreams-112604387268147">
-                        <img src="facebook-icon.png" alt="Daydreams facebook">
+                        <img src="facebook-icon.webp" alt="Daydreams facebook">
                     </a>
                     <a target="_blank" href="https://twitter.com/DaydreamsAnime">
-                        <img src="twitter-icon.png" alt="Daydreams Twitter">
+                        <img src="twitter-icon.webp" alt="Daydreams Twitter">
                     </a>
                     <a target="_blank" href="https://www.instagram.com/daydreamsanime/">
-                        <img src="instagram-icon.png" alt="Daydreams Instagram">
+                        <img src="instagram-icon.webp" alt="Daydreams Instagram">
                     </a>
                 </div>
                 <div class="information">
@@ -144,15 +144,15 @@
             </div>
         </footer>
         <div class="first-scrn zoom" id="zoom1">
-            <img class="S1 animado" id="toSize" src="first-screenshot.png" alt="Daydreams gameplay">
+            <img class="S1 animado" id="toSize" src="first-screenshot.webp" alt="Daydreams gameplay">
             <div class="close">
-                <img id="cerrar" src="close.png" alt="Close.">
+                <img id="cerrar" src="close.webp" alt="Close.">
             </div>
         </div>
         <div class="second-scrn zoom" id="zoom2">
-            <img class="S2 animado" id="toSize" src="second-screenshot.png" alt="Un Anime para cambiar latinoamerica">
+            <img class="S2 animado" id="toSize" src="second-screenshot.webp" alt="Un Anime para cambiar latinoamerica">
             <div class="close">
-                <img id="cerrar1" src="close.png" alt="Close.">
+                <img id="cerrar1" src="close.webp" alt="Close.">
             </div>
         </div>
         <script src="script.js"></script>
