--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Daydreams, un anime tipo Shonen en desarrollo, realizado por un estudio de animación unipersonal.">
         <meta name="google-site-verification" content="Tx8CbtnVBPpylp0sQyHyNZByaDDVBZ7D2wSJF9X_03k" />
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="icon.png">
+        <link rel="icon" href="icon.webp">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
@@ -28,7 +28,7 @@
                     <option value="portugues">Português</option>
                 </select>
             </div>
-            <img class="fua" src="daydreams.png" alt="Daydreams anime">
+            <img class="fua" src="daydreams.webp" alt="Daydreams anime">
             <div class="cont-sc">
                 <div class="scroll-div fua">
                     <span class="text">Haz clic aquí para obtener más información :)</span>
