--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="feature-d">
                     <span id="toUp" class="animado text">
                     Si quieres contribuir en el desarrollo de Daydreams,
-                    puedes donarnos, o simplemente firmar en Change.org.
+                    puedes donarnos, o simplemente firmar en <a href="https://www.change.org/MejoremosLatinoamerica">Change.org.</a>
                     ¡Ayúdanos a sacar adelante este proyecto! ❤</span>
                 </div>
                 <div class="contenido-newsletter">
