--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <meta name="description" content="Daydreams, un anime tipo Shonen en desarrollo, realizado por un estudio de animación unipersonal.">
         <meta name="google-site-verification" content="Tx8CbtnVBPpylp0sQyHyNZByaDDVBZ7D2wSJF9X_03k" />
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="icon.webp">
+        <link rel="apple-touch-icon" href="icon.webp" sizes="180x180">
+        <link rel="icon" href="icon.webp" sizes="32x32">
+        <link rel="icon" href="icon.webp" sizes="16x16">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
         <script src="jquery-3.5.1.min.js"></script>
     </head>
