--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="feature-d">
                     <span id="toUp" class="animado text">
                     Si quieres contribuir en el desarrollo de Daydreams,
-                    puedes <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=K5AM6TGK3H8PA&source=url">donarnos</a>, o simplemente firmar en <a href="https://www.change.org/MejoremosLatinoamerica">Change.org.</a>
+                    puedes <a class="donativos" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=K5AM6TGK3H8PA&source=url">donarnos</a>, o simplemente firmar en <a href="https://www.change.org/MejoremosLatinoamerica">Change.org.</a>
                     ¡Ayúdanos a sacar adelante este proyecto! ❤</span>
                 </div>
                 <div class="contenido-newsletter">
