--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <meta name="description" content="Daydreams, un anime tipo Shonen en desarrollo, realizado por un estudio de animación unipersonal.">
         <meta name="google-site-verification" content="Tx8CbtnVBPpylp0sQyHyNZByaDDVBZ7D2wSJF9X_03k" />
         <link rel="stylesheet" href="style.css">
-        <link rel="apple-touch-icon" href="icon.webp" sizes="180x180">
-        <link rel="icon" href="icon.webp" sizes="32x32">
-        <link rel="icon" href="icon.webp" sizes="16x16">
+        <link rel="apple-touch-icon" href="icon.png" sizes="180x180">
+        <link rel="icon" href="icon.png" sizes="32x32">
+        <link rel="icon" href="icon.png" sizes="16x16">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
         <script src="jquery-3.5.1.min.js"></script>
     </head>
@@ -34,7 +34,7 @@
             <div class="cont-sc">
                 <div class="scroll-div fua">
                     <span class="text">Haz clic aquí para obtener más información :)</span>
-                    <input id="button-scroll" type="image" class="doScroll" src="scroll.webp" alt="">
+                    <input id="button-scroll" type="image" class="doScroll" src="scroll.png" alt="Bajar.">
                 </div>
             </div>
         </header>
@@ -79,14 +79,14 @@
                                         </div>
                                     </div>
                                     <div class="first-screenshot">
-                                        <img id="fixRot" class="pixelt" width="555" height="312" src="first-screenshot.webp" alt="Daydreams juego">
+                                        <img id="fixRot" class="pixelt" width="555" height="312" src="first-screenshot.png" alt="Daydreams juego">
                                     </div>
                                 </div>
                             </li>
                             <li class="second-li">
                                 <div id="fixRot" class="align2 animado">
                                     <div class="second-screenshot">
-                                        <img id="pixelt1" width="555" height="312" src="second-screenshot.webp" alt="un anime para cambiar latinoamerica">
+                                        <img id="pixelt1" width="555" height="312" src="second-screenshot.png" alt="un anime para cambiar latinoamerica">
                                     </div>
                                     <div class="bloque">
                                         <div class="feature-title text">Una educación innovadora</div>
@@ -120,7 +120,7 @@
                     </form>
                     <div class="send-div animado enviaF" id="toLeft">
                         <a href="https://www.change.org/MejoremosLatinoamerica" target="_blank">
-                            <img id="send" src="send-image.webp" alt="Sign on Change.org">
+                            <img id="send" src="send-image.png" alt="Sign on Change.org">
                         </a>
                     </div>
                 </div>
@@ -131,13 +131,13 @@
                 <span id="slogan" class="text">"LA DIFERENCIA ENTRE LOS <strong>SUEÑOS</strong> Y LA REALIDAD, ES LA <strong>ACCIÓN</strong>"</span>
                 <div class="social-networks">
                     <a target="_blank" href="https://www.facebook.com/Daydreams-112604387268147">
-                        <img src="facebook-icon.webp" alt="Daydreams facebook">
+                        <img src="facebook-icon.png" alt="Daydreams facebook">
                     </a>
                     <a target="_blank" href="https://twitter.com/DaydreamsAnime">
-                        <img src="twitter-icon.webp" alt="Daydreams Twitter">
+                        <img src="twitter-icon.png" alt="Daydreams Twitter">
                     </a>
                     <a target="_blank" href="https://www.instagram.com/daydreamsanime/">
-                        <img src="instagram-icon.webp" alt="Daydreams Instagram">
+                        <img src="instagram-icon.png" alt="Daydreams Instagram">
                     </a>
                 </div>
                 <div class="information">
@@ -146,15 +146,15 @@
             </div>
         </footer>
         <div class="first-scrn zoom" id="zoom1">
-            <img class="S1 animado" id="toSize" src="first-screenshot.webp" alt="Daydreams gameplay">
+            <img class="S1 animado" id="toSize" src="first-screenshot.png" alt="Daydreams gameplay">
             <div class="close">
-                <img id="cerrar" src="close.webp" alt="Close.">
+                <img id="cerrar" src="close.png" alt="Close.">
             </div>
         </div>
         <div class="second-scrn zoom" id="zoom2">
-            <img class="S2 animado" id="toSize" src="second-screenshot.webp" alt="Un Anime para cambiar latinoamerica">
+            <img class="S2 animado" id="toSize" src="second-screenshot.png" alt="Un Anime para cambiar latinoamerica">
             <div class="close">
-                <img id="cerrar1" src="close.webp" alt="Close.">
+                <img id="cerrar1" src="close.png" alt="Close.">
             </div>
         </div>
         <script src="script.js"></script>
