--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <a target="_blank" href="https://twitter.com/DaydreamsAnime">
                         <img src="twitter-icon.png" alt="Daydreams Twitter">
                     </a>
-                    <a target="_blank" href="https://www.instagram.com/daydreamsanime/">
+                    <a target="_blank" href="https://www.instagram.com/mariprrum1/">
                         <img src="instagram-icon.png" alt="Daydreams Instagram">
                     </a>
                 </div>
