--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="contain-historyP">
                     <p class="text">
                         <strong>Daydreams</strong> es un anime tipo Shonen en desarrollo,
-                        realizado por un estudio de animación unipersonal. 
+                        realizado por un estudio de animación. 
                         La trama se centra en la vida de Melanie, una adolescente de 17 años 
                         que soñaba con ser una heroína, hasta que se topó con una banda
                         (y no precisamente de rock) que la haría dejar de soñar.
