--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <option value="portugues">Português</option>
                 </select>
             </div>
-            <img class="fua" src="daydreams.png" alt="Daydreams anime">
+            <img class="fua" src="Daydreams.png" alt="Daydreams anime">
             <div class="cont-sc">
                 <div class="scroll-div fua">
                     <span class="text">Haz clic aquí para obtener más información :)</span>
