--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                     <option value="portugues">Português</option>
                 </select>
             </div>
-            <img class="fua" src="Daydreams.png" alt="Daydreams anime">
+            <!--<img class="fua" src="daydreams.png" alt="Daydreams anime">
             <div class="cont-sc">
                 <div class="scroll-div fua">
                     <span class="text">Haz clic aquí para obtener más información :)</span>
                     <input id="button-scroll" type="image" class="doScroll" src="scroll.png" alt="Bajar.">
                 </div>
-            </div>
+            </div>-->
         </header>
         <main>
             <div class="alignCenter-iframe">
