--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta charset="utf-8">
         <title>DAYDREAMS - El anime latino</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="utf-8">
         <meta name="author" content="DaydreamsAnime">
         <meta name="description" content="Daydreams, un anime tipo Shonen en desarrollo, realizado por un estudio de animación unipersonal.">
         <meta name="google-site-verification" content="Tx8CbtnVBPpylp0sQyHyNZByaDDVBZ7D2wSJF9X_03k" />
@@ -13,6 +13,7 @@
         <link rel="icon" href="icon.png" sizes="16x16">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
         <script src="jquery-3.5.1.min.js"></script>
+        <link rel="stylesheet" href="AOS.css">
     </head>
     <body>
 <!--
@@ -30,9 +31,9 @@
                     <option value="portugues">Português</option>
                 </select>
             </div>
-            <img class="fua" src="daydreams.png" alt="Daydreams anime">
+            <img data-aos="fade-up" data-aos-duration="1700" data-aos-offset="0" data-aos-delay="100" src="daydreams.png" alt="Daydreams anime">
             <div class="cont-sc">
-                <div class="scroll-div fua">
+                <div class="scroll-div" data-aos="fade-up" data-aos-duration="1700" data-aos-delay="300" data-aos-offset="0">
                     <span class="text">Haz clic aquí para obtener más información :)</span>
                     <input id="button-scroll" type="image" class="doScroll" src="scroll.png" alt="Bajar.">
                 </div>
@@ -42,10 +43,10 @@
             <div class="alignCenter-iframe">
                 <div class="container">
                     <!-- <iframe src="trailer" allowfullscreen></iframe> Coming Soon ;) -->
-                    <video src="test.mp4" loop muted autoplay class="responsive-iframe animado" id="toUp"></video>
+                    <video src="test.mp4" loop muted autoplay class="responsive-iframe" data-aos="fade-up"></video>
                 </div>
             </div>
-            <section id="toSize" class="history animado">
+            <section class="history" data-aos="zoom-out" data-aos-duration="600">
                 <h5 class="text">¡Próximamente!</h5>
                 <div class="contain-historyP">
                     <p class="text">
@@ -67,7 +68,7 @@
                     <div class="contenido">
                         <ul>
                             <li>
-                                <div id="fixRot" class="align1 animado">
+                                <div class="align1" data-aos="fade-up">
                                     <div class="bloque bloque1">
                                         <div class="feature-title text">Daydreams el juego</div>
                                         <div class="conDesc">
@@ -79,14 +80,14 @@
                                         </div>
                                     </div>
                                     <div class="first-screenshot">
-                                        <img id="fixRot" class="pixelt" width="555" height="312" src="first-screenshot.png" alt="Daydreams juego">
+                                        <img class="pixelt" width="555" height="312" src="first-screenshot.png" alt="Daydreams juego">
                                     </div>
                                 </div>
                             </li>
                             <li class="second-li">
-                                <div id="fixRot" class="align2 animado">
+                                <div class="align2" data-aos="fade-up">
                                     <div class="second-screenshot">
-                                        <img id="pixelt1" width="555" height="312" src="second-screenshot.png" alt="un anime para cambiar latinoamerica">
+                                        <img width="555" height="312" src="second-screenshot.png" alt="un anime para cambiar latinoamerica">
                                     </div>
                                     <div class="bloque">
                                         <div class="feature-title text">Una educación innovadora</div>
@@ -105,20 +106,20 @@
                 </div>
             </section>
             <section class="newsletter">
-                <h2 id="toSize" class="animado text">Haznos realidad</h2>
+                <h2 class="text" data-aos="zoom-out" data-aos-duration="600">Haznos realidad</h2>
                 <div class="feature-d">
-                    <span id="toUp" class="animado text">
+                    <span class="text" data-aos="fade-up" data-aos-duration="1000">
                     Si quieres contribuir en el desarrollo de Daydreams,
                     puedes <a class="donativos" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=K5AM6TGK3H8PA&source=url">donarnos</a>, o simplemente firmar en <a href="https://www.change.org/MejoremosLatinoamerica">Change.org.</a>
                     ¡Ayúdanos a sacar adelante este proyecto! ❤</span>
                 </div>
                 <div class="contenido-newsletter">
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" class="animado" id="toRight">
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" data-aos="fade-right" data-aos-duration="1000">
                         <input type="hidden" name="cmd" value="_s-xclick" />
                         <input type="hidden" name="hosted_button_id" value="K5AM6TGK3H8PA" />
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" class="donate" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donar a Daydreams" />
                     </form>
-                    <div class="send-div animado enviaF" id="toLeft">
+                    <div class="send-div enviaF" data-aos="fade-left" data-aos-duration="1000">
                         <a href="https://www.change.org/MejoremosLatinoamerica" target="_blank">
                             <img id="send" src="send-image.png" alt="Sign on Change.org">
                         </a>
@@ -146,17 +147,24 @@
             </div>
         </footer>
         <div class="first-scrn zoom" id="zoom1">
-            <img class="S1 animado" id="toSize" src="first-screenshot.png" alt="Daydreams gameplay">
+            <img class="S1 animado" src="first-screenshot.png" alt="Daydreams gameplay">
             <div class="close">
                 <img id="cerrar" src="close.png" alt="Close.">
             </div>
         </div>
         <div class="second-scrn zoom" id="zoom2">
-            <img class="S2 animado" id="toSize" src="second-screenshot.png" alt="Un Anime para cambiar latinoamerica">
+            <img class="S2 animado" src="second-screenshot.png" alt="Un Anime para cambiar latinoamerica">
             <div class="close">
                 <img id="cerrar1" src="close.png" alt="Close.">
             </div>
         </div>
         <script src="script.js"></script>
+        <script src="AOS.js"></script>
+        <script>
+            AOS.init({
+                offset: 150,
+                duration: 1500,
+            });
+        </script>
     </body>
 </html>
