--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <li class="second-li">
                                 <div class="align2" data-aos="fade-up">
                                     <div class="second-screenshot">
-                                        <img width="555" height="312" src="second-screenshot.png" alt="un anime para cambiar latinoamerica">
+                                        <img id="pixelt1" width="555" height="312" src="second-screenshot.png" alt="un anime para cambiar latinoamerica">
                                     </div>
                                     <div class="bloque">
                                         <div class="feature-title text">Una educación innovadora</div>
@@ -147,13 +147,13 @@
             </div>
         </footer>
         <div class="first-scrn zoom" id="zoom1">
-            <img class="S1 animado" src="first-screenshot.png" alt="Daydreams gameplay">
+            <img class="S1" src="first-screenshot.png" alt="Daydreams gameplay">
             <div class="close">
                 <img id="cerrar" src="close.png" alt="Close.">
             </div>
         </div>
         <div class="second-scrn zoom" id="zoom2">
-            <img class="S2 animado" src="second-screenshot.png" alt="Un Anime para cambiar latinoamerica">
+            <img class="S2" src="second-screenshot.png" alt="Un Anime para cambiar latinoamerica">
             <div class="close">
                 <img id="cerrar1" src="close.png" alt="Close.">
             </div>
